logger.txt
In file included from /usr/include/c++/13/memory:78,
                 from /usr/include/x86_64-linux-gnu/c++/13/bits/stdc++.h:56,
                 from src/main.cpp:1:
/usr/include/c++/13/bits/unique_ptr.h: In instantiation of ‘constexpr std::__detail::__unique_ptr_t<_Tp> std::make_unique(_Args&& ...) [with _Tp = BinaryExpression; _Args = {unique_ptr<LiteralExpression, default_delete<LiteralExpression> >, Token&, unique_ptr<LiteralExpression, default_delete<LiteralExpression> >}; __detail::__unique_ptr_t<_Tp> = __detail::__unique_ptr_t<BinaryExpression>]’:
src/main.cpp:14:64:   required from here
/usr/include/c++/13/bits/unique_ptr.h:1070:30: error: cannot bind non-const lvalue reference of type ‘std::unique_ptr<Expression>&’ to an rvalue of type ‘std::unique_ptr<Expression>’
 1070 |     { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:380:9: note:   after user-defined conversion: ‘constexpr std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Up, _Ep>&&) [with _Up = LiteralExpression; _Ep = std::default_delete<LiteralExpression>; <template-parameter-2-3> = void; _Tp = Expression; _Dp = std::default_delete<Expression>]’
  380 |         unique_ptr(unique_ptr<_Up, _Ep>&& __u) noexcept
      |         ^~~~~~~~~~
In file included from inc/parser.hpp:6,
                 from src/main.cpp:4:
inc/expression.hpp:9:51: note:   initializing argument 1 of ‘BinaryExpression::BinaryExpression(std::unique_ptr<Expression>&, Token, std::unique_ptr<Expression>&)’
    9 |     BinaryExpression(std::unique_ptr<Expression>& left, Token op, std::unique_ptr<Expression>& right);
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
